--- a/weblog/config/weblog_uWSGI.ini
+++ b/weblog/config/weblog_uWSGI.ini
@@ -1,6 +1,11 @@
 [uwsgi]
 socket    = 127.0.0.1:8000
-chdir     = /home/edward/DjangoBlog-dev
+chdir     = /home/edward/SimplePersonalBlog
 wsgi-file = weblog/config/wsgi.py
 processes = 4
 threads   = 2
+
+
+master=True #ÉÖ´˲Îý»¸öøOA
+vacuum=True #Í³ö¬ÇÀ»·¾³:w
+daemonize = uwsgi.log
